update: fixed animation and shadow on mobile media query

--- a/css/main.css
+++ b/css/main.css
@@ -1184,6 +1184,11 @@ h6 {
   margin-bottom: 0.8rem;
 }
 
+@media screen and (min-width: 1178px) {
+  .d5 {
+    font-size: var(--d5-font-size-desktop);
+  }
+}
 @media screen and (max-width: 1178px) {
   .cards-container {
     max-width: 100%;
@@ -1200,6 +1205,9 @@ h6 {
     transform: translateY(-10px);
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
   }
+  .cards-container .card .d5 {
+    font-size: var(--d5-font-size-desktop);
+  }
 }
 @media screen and (max-width: 770px) {
   .cards-container {
@@ -1212,12 +1220,12 @@ h6 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.7);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
     transition: transform 0.5s ease, box-shadow 0.5s ease;
   }
   .cards-container .card:hover {
     transform: translateY(-10px);
-    box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.7);
+    box-shadow: 0px 20px 15px rgba(0, 0, 0, 0.5);
   }
   .cards-container .card .spans-container {
     display: flex;
@@ -1230,6 +1238,9 @@ h6 {
   }
   .cards-container .card p {
     display: none;
+  }
+  .cards-container .card .d5 {
+    font-size: var(--d5-font-size-mobile);
   }
 }
 /* OLD Card Styling*/
