--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -37,6 +37,12 @@
   }
 }
 
+@media screen and (min-width: 1178px) {
+  .d5 {
+    font-size: var(--d5-font-size-desktop);
+  }
+}
+
 @media screen and (max-width: 1178px) {
   .cards-container {
     max-width: 100%;
@@ -54,13 +60,9 @@
         box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.7);
       }
 
-      // h3 {
-      //   font-size: auto;
-      // }
-
-      // h6 {
-      //   margin: 0.5rem 1rem 0.5rem 1rem;
-      // }
+      .d5 {
+        font-size: var(--d5-font-size-desktop);
+      }
     }
   }
 }
@@ -77,12 +79,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.7);
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
         transition: transform 0.5s ease, box-shadow 0.5s ease;
   
         &:hover {
           transform: translateY(-10px);
-          box-shadow: 10px 20px 50px rgba(0, 0, 0, 0.7);
+          box-shadow: 0px 20px 15px rgba(0, 0, 0, 0.5);
         }
   
         .spans-container {
@@ -98,6 +100,10 @@
   
         p {
           display: none;
+        }
+
+        .d5 {
+          font-size: var(--d5-font-size-mobile);
         }
       }
     }
